--- a/report/egbib.bib
+++ b/report/egbib.bib
@@ -1,3 +1,25 @@
+@inproceedings{shi2016real,
+   author = {Shi, Wenzhe and Caballero, Jose and Huszár, Ferenc and Totz, Johannes and Aitken, Andrew P and Bishop, Rob and Rueckert, Daniel and Wang, Zehan},
+   title = {Real-time single image and video super-resolution using an efficient sub-pixel convolutional neural network},
+   booktitle = {IEEE conference on computer vision and pattern recognition},
+   pages = {1874-1883},
+   year = {2016},
+   type = {Conference Proceedings}
+}
+
+@article{ioffe2015batch,
+	title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+	author={Ioffe, Sergey and Szegedy, Christian},
+	journal={arXiv preprint arXiv:1502.03167},
+	year={2015}
+}
+
+@article{gross2016training,
+	title={Training and investigating residual nets},
+	author={Gross, Sam and Wilber, Michael},
+	journal={Facebook AI Research},
+	year={2016}
+}
 @inproceedings{song2010adaptive,
   title={An adaptive L 1--L 2 hybrid error model to super-resolution},
   author={Song, Huihui and Zhang, Lei and Wang, Peikang and Zhang, Kaihua and Li, Xin},
